Added more NG experience.

--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -211,7 +211,7 @@
 % ALSO: \rcollength is the width of the right column of the table
 %       (adjust it to your liking; default is 1.85in).
 %
-\newlength{\rcollength}\setlength{\rcollength}{2.95in}%
+\newlength{\rcollength}\setlength{\rcollength}{3.5in}%
 %
 \begin{tabular}[t]{@{}p{\textwidth-\rcollength}p{\rcollength}}
 1750 Wewatta St, Unit 1300, 
@@ -219,39 +219,45 @@
 \href{mailto:marvin\_smith1@me.com}{marvin\_smith1@me.com}\\
 Denver, CO, 80202
 & \textsl{Cell:} (775) 997-4261 \\          
-& \textsl{www:} \href{http://marvinsmith3.wordpress.com}{http://marvinsmith3.wordpress.com}\\
+& \textsl{LinkedIn:} \href{https://www.linkedin.com/in/marvin-smith-b8b99420/}{link}\\
 & \textsl{Github:} \href{http://github.com/marvins}{http://github.com/marvins}\\
-%& \textsl{StackOverflow:} \href{https://careers.stackoverflow.com/msmith81886}{https://careers.stackoverflow.com/msmith81886}\\
 \end{tabular}
 
 %**************************************************************
 %                      WORK EXPERIENCE
 %**************************************************************
 \section{Work Experience}
+
+\href{http://northropgrumman.com}{
+    \textbf{Senior Principal Software Engineer, Launch and Missile Defense Systems}}\\
+    Northrop Grumman Corporation, Boulder, CO\\
+    January 2023 - Present
+    \begin{outerlist}
+        \item \textbf{Software Engineering Architect - FORGE, 2023 - Present}\\
+        \begin{innerlist}
+            \item Software team lead on the Future Operationally Resilient Ground Evolution (FORGE) program.  Responsible for the execution and delivery of the ``Sensor-Specific-Processing" 
+                 capability which seeks to incorporate existing legacy SBIRS-based Missile Warning satellites into the new DoD common Command-and-Control infrastructure. 
+            \item Currently performing analysis of software and hardware requirements to help constrain the amount of compute hardware required to fulfill program needs.  \\
+        \end{innerlist}
+    \end{outerlist}
 %SNC
 \href{http://www.sncorp.com}{
      \textbf{Principal Software Engineer, ISR, Aviation, and Security (IAS) Division}}\\
      Sierra Nevada Corporation, Englewood, CO\\
-     January 2012 - Present
+     January 2012 - January 2023
      \begin{outerlist}
          \item \textbf{Systems Engineering, Integration, and Test (SEIT) Lead, 2021 - Present}\\
          \begin{innerlist}
-            \item Long-Wave Infra-Red, Wide Area Motion Imagery (WAMI) Platform, DoD program.
-            \item Lead a team of 6 Systems Engineers, Scientists, and Program Coordinators.
+            \item Long-Wave IR, Wide-Area Motion-Imagery (WAMI) Platform.
+            \item Lead a team of 10+ Systems Engineers, Scientists, and Program Coordinators.
             \item Responsible for the integration, testing, and fielding of the platform.
             \begin{innerlist}
-                \item Developed the test plan and test procedures to verify specific and targeted objectives. 
-                \item Coordinated and led flight test activities to ensure high-priority objectives were met. 
-                \item I have spent lots of time in aircraft hangars ensuring that the system works prior to high-risk test activities. 
+                \item Developed the test plan and test procedures to verify system and subsystem requirements. 
+                \item Coordinated and led flight test activities to ensure program requirements were satisfied and customer objectives are met. 
             \end{innerlist}
-            \item I am responsible for the development, tracking, and maintenance of all requirements.
-            \begin{innerlist}
-                    \item Developed many of the verification procedures for system and software requirements. 
-                    \item Verified all requirements per required methodology (ex:  flight tests, lab tests, and analysis/inspection reports).
-                    \item Verified derived requirements through subcontractors via similar methods. 
-            \end{innerlist}
-            \item I still write lots of code, as well as train others to write code, to help the Systems Engineering team to more efficiently achieve objectives.
-            \item I spend 80\% of my time putting out fires. 
+            \item Responsible for the development, tracking, and maintenance of all requirements.
+            \item I wrote a significant amount of code, as well as trained other non-SW engineers to write code.  This was done to help the Systems Engineering 
+                  team to more efficiently perform analysis, increasingly automate testing, and to satisfy program objectives with more rigor.
          \end{innerlist}
          
          \item \textbf{Lead Developer, 2016 - 2021}
@@ -260,7 +266,9 @@ Denver, CO, 80202
             \item Led the Image-Processing software team on the Gorgon-Stare Wide-Area Surveillance System.
             \item Designed and implemented ortho-image rendering algorithms for use on airborne systems as well as HPC clusters.
             \item Developed camera calibration process using feature detection and optimization algorithms.
+            \item Developed significant quantities of mathematical software with a heavy emphasis on Numerical Methods, Statistics, Linear Algebra, and Machine-Learning.
             \item Designed and implemented image stabilization algorithms.
+            \item Implemented or utilized many Image-Processing algorithms. Examples include Fourier transforms, Sharpening/Smoothing/Enhancement operations, Segmentation, and Inpainting.
             \item Created GIS data (still imagery, motion imagery, vector data) in formats
                   such as Pixia NUI, NITF, KML, MPEG/H264, Shapefiles, etc.
             \item Assisted in the development of new camera models for multi-camera sensors.
@@ -272,9 +280,8 @@ Denver, CO, 80202
                Technical Implementation Guides (STIGs) for Windows and Linux systems.
          \end{innerlist}
          \item Primary fields of expertise are in remote sensing and high-performance computing. 
-         \item I have an active DOD security clearance.
+         \item I have an active DOD security clearance.\\
      \end{outerlist}
-\clearpage
 
 %USAF
 \href{http://www.nv.ngb.army.mil/air/index.cfm}
@@ -356,9 +363,6 @@ Denver, CO, 80202
     \end{outerlist}
 
 \item{\textbf{System Administration}:} Configuration Management deployment (git, svn, Artifactory), constructing software build systems (Jenkins), and some networking to setup software labs.
-
-\item{\textbf{Mechanical}:} Electronics repair, Soldering, Hand/Power Tools, use of 
-                     Military/Civilian technical manuals and wiring diagrams.
 
 \end{outerlist}
 
