Updating Resume with more accurate NG and SNC contributions.

--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -233,11 +233,11 @@ Denver, CO, 80202
     Northrop Grumman Corporation, Boulder, CO\\
     January 2023 - Present
     \begin{outerlist}
-        \item \textbf{Software Engineering Architect - FORGE, 2023 - Present}\\
+        \item \textbf{Software Engineering Architect - FORGE Legacy SSP, 2023 - Present}\\
         \begin{innerlist}
-            \item Software team lead on the Future Operationally Resilient Ground Evolution (FORGE) program.  Responsible for the execution and delivery of the ``Sensor-Specific-Processing" 
-                 capability which seeks to incorporate existing legacy SBIRS-based Missile Warning satellites into the new DoD common Command-and-Control infrastructure. 
-            \item Currently performing analysis of software and hardware requirements to help constrain the amount of compute hardware required to fulfill program needs.  \\
+            \item Algorithm SME on the Future Operationally Resilient Ground Evolution (FORGE) program.  
+                  Responsible for building high throughput, low latency, and scientifically accurate imagery and telemetry processing algorithms
+                  for the SBIRS Missile-Defense system. \href{https://scitec.com/scitec-inc-awarded-45-8-million-contract-for-continued-development-of-forge-legacy-sbirs-ssp/}{\underline{link}}\\
         \end{innerlist}
     \end{outerlist}
 %SNC
@@ -249,35 +249,33 @@ Denver, CO, 80202
          \item \textbf{Systems Engineering, Integration, and Test (SEIT) Lead, 2021 - Present}\\
          \begin{innerlist}
             \item Long-Wave IR, Wide-Area Motion-Imagery (WAMI) Platform.
-            \item Lead a team of 10+ Systems Engineers, Scientists, and Program Coordinators.
+            \item Led a team of 10+ Systems Engineers, Scientists, and Program Coordinators.
             \item Responsible for the integration, testing, and fielding of the platform.
             \begin{innerlist}
-                \item Developed the test plan and test procedures to verify system and subsystem requirements. 
-                \item Coordinated and led flight test activities to ensure program requirements were satisfied and customer objectives are met. 
+                \item Developed the test plan and procedures to verify system and subsystem requirements. 
+                \item Coordinated and led flight test activities to verify requirements.
+                \item Responsible for managing and tracking delivery of customer CDRLs.
             \end{innerlist}
-            \item Responsible for the development, tracking, and maintenance of all requirements.
             \item I wrote a significant amount of code, as well as trained other non-SW engineers to write code.  This was done to help the Systems Engineering 
-                  team to more efficiently perform analysis, increasingly automate testing, and to satisfy program objectives with more rigor.
+                  team to more efficiently perform analysis, increasingly automate testing, and to satisfy program objectives with appropriate rigor.\\
          \end{innerlist}
          
          \item \textbf{Lead Developer, 2016 - 2021}
          \item \textbf{Software Engineer, 2012 - 2016} 
          \begin{innerlist}
             \item Led the Image-Processing software team on the Gorgon-Stare Wide-Area Surveillance System.
-            \item Designed and implemented ortho-image rendering algorithms for use on airborne systems as well as HPC clusters.
-            \item Developed camera calibration process using feature detection and optimization algorithms.
+            \item Designed and implemented ortho-image rendering algorithms for use on airborne systems as well as HPC systems.
+            \item Developed camera calibration process using feature detection and Bundle-Adjustment algorithms.
             \item Developed significant quantities of mathematical software with a heavy emphasis on Numerical Methods, Statistics, Linear Algebra, and Machine-Learning.
             \item Designed and implemented image stabilization algorithms.
             \item Implemented or utilized many Image-Processing algorithms. Examples include Fourier transforms, Sharpening/Smoothing/Enhancement operations, Segmentation, and Inpainting.
             \item Created GIS data (still imagery, motion imagery, vector data) in formats
                   such as Pixia NUI, NITF, KML, MPEG/H264, Shapefiles, etc.
-            \item Assisted in the development of new camera models for multi-camera sensors.
+            \item Assisted in the development of new camera models for multi-camera sensor payloads.
             \item Designed, written, and traced system and software requirements.  I've helped create and modify requirements to fulfill customer needs against technical constraints.
             \item Significant test experience.  I've written test plans, test cards, and mapped test activities against system requirements. I can summarize a complex activity such as measuring Ground-Location-Accuracy (GLA) of an ortho-image into a process which test personnel can replicate and sign-off on.
          \item I configured and deployed a significant portion of the initial Continuous-Integration, unit-test, and deployment infrastructure 
                required by our team.
-         \item Assisted with development of OS security hardening procedures and ensured compliance with DoD Security 
-               Technical Implementation Guides (STIGs) for Windows and Linux systems.
          \end{innerlist}
          \item Primary fields of expertise are in remote sensing and high-performance computing. 
          \item I have an active DOD security clearance.\\
