--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -233,7 +233,7 @@ Denver, CO, 80202
     Northrop Grumman Corporation, Boulder, CO\\
     January 2023 - Present
     \begin{outerlist}
-        \item \textbf{Software Engineering Architect - FORGE Legacy SSP, 2023 - Present}\\
+        \item \textbf{Software Engineering Architect - FORGE SSP, 2023 - Present}\\
         \begin{innerlist}
             \item Algorithm SME on the Future Operationally Resilient Ground Evolution (FORGE) program.  
                   Responsible for building high throughput, low latency, and scientifically accurate imagery and telemetry processing algorithms
@@ -246,7 +246,7 @@ Denver, CO, 80202
      Sierra Nevada Corporation, Englewood, CO\\
      January 2012 - January 2023
      \begin{outerlist}
-         \item \textbf{Systems Engineering, Integration, and Test (SEIT) Lead, 2021 - Present}\\
+         \item \textbf{Systems Engineering, Integration, and Test (SEIT) Lead, 2021 - 2023}\\
          \begin{innerlist}
             \item Long-Wave IR, Wide-Area Motion-Imagery (WAMI) Platform.
             \item Led a team of 10+ Systems Engineers, Scientists, and Program Coordinators.
@@ -260,7 +260,7 @@ Denver, CO, 80202
                   team to more efficiently perform analysis, increasingly automate testing, and to satisfy program objectives with appropriate rigor.\\
          \end{innerlist}
          
-         \item \textbf{Lead Developer, 2016 - 2021}
+         \item \textbf{Image Processing Lead, 2016 - 2021}
          \item \textbf{Software Engineer, 2012 - 2016} 
          \begin{innerlist}
             \item Led the Image-Processing software team on the Gorgon-Stare Wide-Area Surveillance System.
@@ -333,6 +333,75 @@ Denver, CO, 80202
 
 
 %**************************************************************
+%                      EDUCATION
+%**************************************************************
+\section{Education}
+
+\href{https://business.ucdenver.edu/mba/emba}{\textbf{University of Colorado, Denver}}
+\begin{outerlist}
+\item[] Executive Masters of Business Administration, In Progress
+    \begin{innerlist}
+        \item Graduating February 2025\\
+    \end{innerlist}
+\end{outerlist}
+
+\href{http://www.unr.edu/}{\textbf{University of Nevada, Reno}},
+Reno, NV 
+\begin{outerlist}
+\item[] Bachelors of Science, 
+        \href{http://www.cse.unr.edu/}
+             {Computer Science}
+             (Graduated: May 2012)
+        \begin{innerlist}
+        \item UNR GPA: \emph{3.65}, CS GPA: \emph{3.6}
+        \item Adviser:
+              \href{http://www.cse.unr.edu/~bebis/}
+                   {Dr. George Bebis}
+        \item Areas of Interest: Computer Vision, Image Processing
+        \item Specialized Undergraduate Courses: Computer Vision, Advanced Computer Vision, 
+              Artificial Intelligence, Simulation Physics, and Image Processing.
+        \item Graduate Courses Completed: Machine Learning, Computer Graphics, Patent Law (Business School).\\
+        \end{innerlist}
+\end{outerlist}
+
+%UNITED STATES AIR FORCE
+\href{http://www.af.mil/}{\textbf{Nevada Air National Guard}}
+152 Maintenance Squadron, 152 Air Wing, Reno, NV
+\begin{outerlist}
+\item[] 2A553B, {Instrumentation and Flight Controls Journeyman}
+        \begin{innerlist}
+        \item Instrumentation and Flight Controls Craftsman Course
+        \item Airman Leadership School, Correspondance, May 2011
+        \item Instrumentation and Flight Controls Apprentice School,\\
+        \href{http://www.sheppard.af.mil/}
+             {Sheppard Air Force Base, TX}, June 2007
+        \item Electronic Principles School,\\
+        \href{http://www.keesler.af.mil/}
+             {Keesler Air Force Base, MS}, January 2007
+        \item Basic Military Training,\\
+        \href{http://www.lackland.af.mil/}
+             {Lackland Air Force Base, TX}, November 2006\\
+        \end{innerlist}
+\end{outerlist}
+
+
+%**************************************************************
+%                   Volunteering
+%**************************************************************
+\section{Volunteering}
+\textbf{GIS Analyst, Denver Urban Gardens}\\
+    June 2023 - Current\\
+    Supporting DUG by building data-driven environmental analysis tools.\\
+    Currently using Landsat, Planet, and other Remote-Sensing platforms to measure Urban Heat Island effect and Evapotranspiration within Denver.\\
+
+\textbf{Coach, Codebusters First Tech Challenge Robotics Team}\\
+    Boys and Girls Club of Truckee Meadows\\
+    May 2016 - February 2020\\
+
+\textbf{Mentor, Boys and Girls Club of Truckee Meadows}\\
+    March 2015 - May 2016
+
+    %**************************************************************
 %                     TECHNICAL SKILLS
 %*************************************************************
 \section{Technical Skills}
@@ -384,64 +453,6 @@ Garcia, Aranda, Suarez, Tercero, ``Learning Image Processing with OpenCV", Packt
 International Symposium on Visual Computing, 2010.
 
 \end{outerlist}
-
-
-%**************************************************************
-%                      EDUCATION
-%**************************************************************
-\section{Education}
-
-
-\href{http://www.unr.edu/}{\textbf{University of Nevada, Reno}},
-Reno, NV 
-\begin{outerlist}
-\item[] Bachelors of Science, 
-        \href{http://www.cse.unr.edu/}
-             {Computer Science}
-             (Graduated: May 2012)
-        \begin{innerlist}
-        \item UNR GPA: \emph{3.65}, CS GPA: \emph{3.6}
-        \item Adviser:
-              \href{http://www.cse.unr.edu/~bebis/}
-                   {Dr. George Bebis}
-        \item Areas of Interest: Computer Vision, Image Processing
-        \item Specialized Undergraduate Courses: Computer Vision, Advanced Computer Vision, 
-              Artificial Intelligence, Simulation Physics, and Image Processing.
-        \item Graduate Courses Completed: Machine Learning, Computer Graphics, Patent Law (Business School).\\
-        \end{innerlist}
-\end{outerlist}
-
-%UNITED STATES AIR FORCE
-\href{http://www.af.mil/}{\textbf{Nevada Air National Guard}}
-152 Maintenance Squadron, 152 Air Wing, Reno, NV
-\begin{outerlist}
-\item[] 2A553B, {Instrumentation and Flight Controls Journeyman}
-        \begin{innerlist}
-        \item Instrumentation and Flight Controls Craftsman Course
-        \item Airman Leadership School, Correspondance, May 2011
-        \item Instrumentation and Flight Controls Apprentice School,\\
-        \href{http://www.sheppard.af.mil/}
-             {Sheppard Air Force Base, TX}, June 2007
-        \item Electronic Principles School,\\
-        \href{http://www.keesler.af.mil/}
-             {Keesler Air Force Base, MS}, January 2007
-        \item Basic Military Training,\\
-        \href{http://www.lackland.af.mil/}
-             {Lackland Air Force Base, TX}, November 2006\\
-        \end{innerlist}
-\end{outerlist}
-
-
-%**************************************************************
-%                   Volunteering
-%**************************************************************
-\section{Volunteering}
-\textbf{Coach, Codebusters First Tech Challenge Robotics Team}\\
-    Boys and Girls Club of Truckee Meadows\\
-    May 2016 - February 2020\\
-
-\textbf{Mentor, Boys and Girls Club of Truckee Meadows}\\
-    March 2015 - May 2016
 
 %**************************************************************
 %                   REFERENCES 
